--- a/.classpath
+++ b/.classpath
@@ -10,10 +10,27 @@
 	<classpathentry kind="lib" path="config"/>
 	<classpathentry kind="lib" path="lib/libthrift-r917130.jar"/>
 	<classpathentry kind="lib" path="lib/junit-4.6.jar"/>
-	<classpathentry kind="lib" path="lib/log4j-1.2.15.jar"/>
-	<classpathentry kind="lib" path="lib/apache-solr-core-1.4.0.jar" sourcepath="/Users/jake/apache-solr-1.4.0/src/java"/>
-	<classpathentry kind="lib" path="lib/apache-solr-solrj-1.4.0.jar"/>
-	<classpathentry kind="lib" path="lib/lucene-analyzers-3.0.1.jar"/>
-	<classpathentry kind="lib" path="lib/lucene-core-3.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/commons-codec-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/commons-fileupload-1.2.1.jar"/>
+	<classpathentry kind="lib" path="lib/commons-httpclient-3.1.jar"/>
+	<classpathentry kind="lib" path="lib/commons-io-1.4.jar"/>
+	<classpathentry kind="lib" path="lib/commons-lang-2.4.jar"/>
+	<classpathentry kind="lib" path="lib/commons-logging-1.0.4.jar"/>
+	<classpathentry kind="lib" path="lib/geronimo-stax-api_1.0_spec-1.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/log4j-1.2.14.jar"/>
+	<classpathentry kind="lib" path="lib/lucene-analyzers-2.9.1.jar"/>
+	<classpathentry kind="lib" path="lib/lucene-core-2.9.1.jar"/>
+	<classpathentry kind="lib" path="lib/lucene-highlighter-2.9.1.jar"/>
+	<classpathentry kind="lib" path="lib/lucene-memory-2.9.1.jar"/>
+	<classpathentry kind="lib" path="lib/lucene-misc-2.9.1.jar"/>
+	<classpathentry kind="lib" path="lib/lucene-queries-2.9.1.jar"/>
+	<classpathentry kind="lib" path="lib/lucene-snowball-2.9.1.jar"/>
+	<classpathentry kind="lib" path="lib/lucene-spellchecker-2.9.1.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j-simple-1.5.8.jar"/>
+	<classpathentry kind="lib" path="lib/solr-commons-csv-1.4.0.jar"/>
+	<classpathentry kind="lib" path="lib/solr-core-1.4.0.jar"/>
+	<classpathentry kind="lib" path="lib/solr-solrj-1.4.0.jar"/>
+	<classpathentry kind="lib" path="lib/stax-api-1.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/wstx-asl-3.2.7.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
