--- a/build.xml
+++ b/build.xml
@@ -18,7 +18,8 @@
  ~ specific language governing permissions and limitations
  ~ under the License.
  -->
-<project name="lucandra" default="lucandra.jar" basedir=".">
+<project name="lucandra" default="lucandra.jar" basedir="."
+         xmlns:ivy="antlib:org.apache.ivy.ant">
 
         <description>Lucandra</description>
 
@@ -34,14 +35,14 @@
         <property name="cassandra.port" value="9160"/>
         <property name="cassandra.framed" value="false"/>
 
-        <path id="lucandra.classpath">
-          <pathelement location="${build.classes}"/>
-          <pathelement location="${build.test.classes}"/>
-          <pathelement location="${config}"/>
-          <fileset dir="${lib}">
-            <include name="**/*.jar" />
-          </fileset>
-        </path>
+
+        <!-- ivy properties -->
+        <property name="ivy.version" value="2.1.0" />
+        <property name="ivy.dir" location="${build}/ivy" />
+        <property name="ivy.jar" location="${ivy.dir}/ivy-${ivy.version}.jar"/>
+        <property name="ivy.lib.dir" location="${lib}" />
+        <property name="ivy_repo_url" value="http://repo2.maven.org/maven2/org/apache/ivy/ivy/${ivy.version}/ivy-${ivy.version}.jar"/>
+        <property name="ivysettings.xml" location="${ivy.dir}/ivysettings.xml" />
 
         <target name="init">
           <tstamp />
@@ -49,9 +50,72 @@
           <mkdir dir="${build}/output" />
           <mkdir dir="${build.classes}" />
           <mkdir dir="${build.test.classes}"/>
+          <mkdir dir="${ivy.dir}" />
+          <mkdir dir="${ivy.lib.dir}" />
+          <!--
+              Allow Ivy to be disabled with "-Dnoivy=".
+              It is kind of a hack to pretend that we already found it,
+              but Ant doesn't provide an easy way of blocking dependencies
+              from executing or checking multiple conditions.
+            -->
+          <condition property="ivy.found"><isset property="noivy" /></condition>
+          <condition property="offline"><isset property="noivy" /></condition>
         </target>
 
-        <target name="compile" depends="init">
+
+        <target name="ivy-download"  description="To download ivy" unless="offline">
+          <get src="${ivy_repo_url}" dest="${ivy.jar}" usetimestamp="true"/>
+        </target>
+
+        <target name="ivy-probe-antlib">
+          <condition property="ivy.found">
+            <typefound uri="antlib:org.apache.ivy.ant" name="cleancache"/>
+          </condition>
+        </target>
+
+        <target name="ivy-init-antlib" depends="ivy-download,ivy-probe-antlib" unless="ivy.found">
+          <typedef uri="antlib:org.apache.ivy.ant" onerror="fail"
+                   loaderRef="ivyLoader">
+            <classpath>
+              <pathelement location="${ivy.jar}"/>
+            </classpath>
+          </typedef>
+          <fail>
+            <condition >
+              <not>
+                <typefound uri="antlib:org.apache.ivy.ant" name="cleancache"/>
+              </not>
+            </condition>
+            You need Apache Ivy 2.0 or later from http://ant.apache.org/
+            It could not be loaded from ${ivy_repo_url}
+          </fail>
+        </target>
+
+        <target name="resolve" depends="ivy-init-antlib" description="retrieve dependencies with ivy" unless="noivy">
+          <ivy:retrieve />
+        </target>
+
+
+        <path id="autoivy.classpath">
+          <fileset dir="${ivy.lib.dir}">
+            <include name="**/*.jar" />
+          </fileset>
+        </path>
+
+        <!-- ===========================  -->
+
+        <path id="lucandra.classpath">
+          <pathelement location="${build.classes}"/>
+          <pathelement location="${build.test.classes}"/>
+          <pathelement location="${config}"/>
+          <fileset dir="${lib}">
+            <include name="**/*.jar" />
+          </fileset>
+          <path refid="autoivy.classpath" />
+        </path>
+
+
+        <target name="compile" depends="init,resolve">
           <javac debug="true" destdir="${build.classes}">
             <src path="${thrift}"/>
             <src path="${src}"/>
@@ -85,7 +149,7 @@
           <fail if="testfailed" message="Some test(s) failed."/>
         </target>
 
-        <target name="lucandra.jar" depends="clean,compile,compile.tests">
+        <target name="lucandra.jar" depends="compile,compile.tests">
           <jar jarfile="lucandra.jar" basedir="${build.classes}" />
           <jar jarfile="lucandra-tests.jar" basedir="${build.test.classes}" />
         </target>
