--- a/.classpath
+++ b/.classpath
@@ -1,36 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="thrift"/>
-	<classpathentry kind="src" path="test"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
-	<classpathentry kind="lib" path="lib/slf4j-api-1.5.8.jar"/>
-	<classpathentry kind="lib" path="lib/slf4j-log4j12-1.5.8.jar"/>
-	<classpathentry kind="lib" path="config"/>
-	<classpathentry kind="lib" path="lib/libthrift-r917130.jar"/>
-	<classpathentry kind="lib" path="lib/junit-4.6.jar"/>
-	<classpathentry kind="lib" path="lib/commons-codec-1.3.jar"/>
-	<classpathentry kind="lib" path="lib/commons-fileupload-1.2.1.jar"/>
-	<classpathentry kind="lib" path="lib/commons-httpclient-3.1.jar"/>
-	<classpathentry kind="lib" path="lib/commons-io-1.4.jar"/>
-	<classpathentry kind="lib" path="lib/commons-lang-2.4.jar"/>
-	<classpathentry kind="lib" path="lib/commons-logging-1.0.4.jar"/>
-	<classpathentry kind="lib" path="lib/geronimo-stax-api_1.0_spec-1.0.1.jar"/>
-	<classpathentry kind="lib" path="lib/log4j-1.2.14.jar"/>
-	<classpathentry kind="lib" path="lib/lucene-analyzers-2.9.1.jar"/>
-	<classpathentry kind="lib" path="lib/lucene-core-2.9.1.jar"/>
-	<classpathentry kind="lib" path="lib/lucene-highlighter-2.9.1.jar"/>
-	<classpathentry kind="lib" path="lib/lucene-memory-2.9.1.jar"/>
-	<classpathentry kind="lib" path="lib/lucene-misc-2.9.1.jar"/>
-	<classpathentry kind="lib" path="lib/lucene-queries-2.9.1.jar"/>
-	<classpathentry kind="lib" path="lib/lucene-snowball-2.9.1.jar"/>
-	<classpathentry kind="lib" path="lib/lucene-spellchecker-2.9.1.jar"/>
-	<classpathentry kind="lib" path="lib/slf4j-simple-1.5.8.jar"/>
-	<classpathentry kind="lib" path="lib/solr-commons-csv-1.4.0.jar"/>
-	<classpathentry kind="lib" path="lib/solr-core-1.4.0.jar"/>
-	<classpathentry kind="lib" path="lib/solr-solrj-1.4.0.jar"/>
-	<classpathentry kind="lib" path="lib/stax-api-1.0.1.jar"/>
-	<classpathentry kind="lib" path="lib/wstx-asl-3.2.7.jar"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="src" output="target/classes" path="src"/>
+	<classpathentry kind="src" output="target/classes" path="thrift"/>
+	<classpathentry kind="src" output="target/test-classes" path="test"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
+	<classpathentry kind="con" path="org.maven.ide.eclipse.MAVEN2_CLASSPATH_CONTAINER"/>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
