--- a/pom.xml
+++ b/pom.xml
@@ -262,6 +262,8 @@
 							<goal>deploy-file</goal>
 						</goals>
 						<configuration>
+							<repsitoryId>${env.repositoryId}</repsitoryId>
+							<url>${env.url}</url>
 							<packaging>jar</packaging>
 							<groupId>libthrift</groupId>
 							<artifactId>libthrift</artifactId>
