--- a/pom.xml
+++ b/pom.xml
@@ -197,7 +197,7 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
 					<includes>
-						<include>**/*Tests.java</include>
+						<include>**/*Test*.java</include>
 					</includes>
 					<systemPropertyVariables>
 						<cassandra.host>127.0.0.1</cassandra.host>
