--- a/.classpath
+++ b/.classpath
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="thrift"/>
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
 	<classpathentry kind="lib" path="lib/slf4j-api-1.5.8.jar"/>
-	<classpathentry kind="lib" path="lib/slf4j-log4j12-1.5.8.jar"/>
 	<classpathentry kind="lib" path="config"/>
 	<classpathentry kind="lib" path="lib/libthrift-r917130.jar"/>
 	<classpathentry kind="lib" path="lib/junit-4.6.jar"/>
@@ -32,5 +30,24 @@
 	<classpathentry kind="lib" path="lib/solr-solrj-1.4.0.jar"/>
 	<classpathentry kind="lib" path="lib/stax-api-1.0.1.jar"/>
 	<classpathentry kind="lib" path="lib/wstx-asl-3.2.7.jar"/>
+	<classpathentry kind="lib" path="/Users/jake/workspace/cassandra-0.6/build/apache-cassandra-0.6.1.jar"/>
+	<classpathentry kind="lib" path="/cassandra-0.6/lib/antlr-3.1.3.jar"/>
+	<classpathentry kind="lib" path="/cassandra-0.6/lib/avro-1.2.0-dev.jar"/>
+	<classpathentry kind="lib" path="/cassandra-0.6/lib/clhm-production.jar"/>
+	<classpathentry kind="lib" path="/cassandra-0.6/lib/commons-cli-1.1.jar"/>
+	<classpathentry kind="lib" path="/cassandra-0.6/lib/commons-codec-1.2.jar"/>
+	<classpathentry kind="lib" path="/cassandra-0.6/lib/commons-collections-3.2.1.jar"/>
+	<classpathentry kind="lib" path="/cassandra-0.6/lib/commons-lang-2.4.jar"/>
+	<classpathentry kind="lib" path="/cassandra-0.6/lib/google-collections-1.0.jar"/>
+	<classpathentry kind="lib" path="/cassandra-0.6/lib/hadoop-core-0.20.1.jar"/>
+	<classpathentry kind="lib" path="/cassandra-0.6/lib/high-scale-lib.jar"/>
+	<classpathentry kind="lib" path="/cassandra-0.6/lib/jackson-core-asl-1.4.0.jar"/>
+	<classpathentry kind="lib" path="/cassandra-0.6/lib/jackson-mapper-asl-1.4.0.jar"/>
+	<classpathentry kind="lib" path="/cassandra-0.6/lib/jline-0.9.94.jar"/>
+	<classpathentry kind="lib" path="/cassandra-0.6/lib/json-simple-1.1.jar"/>
+	<classpathentry kind="lib" path="/cassandra-0.6/lib/libthrift-r917130.jar"/>
+	<classpathentry kind="lib" path="/cassandra-0.6/lib/log4j-1.2.14.jar"/>
+	<classpathentry kind="lib" path="/cassandra-0.6/lib/slf4j-api-1.5.8.jar"/>
+	<classpathentry kind="lib" path="/cassandra-0.6/lib/slf4j-log4j12-1.5.8.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
