Updated tests that fail to be ignored until the underlying cassandra issue is resolved.

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,12 @@
 			<artifactId>libthrift</artifactId>
 			<version>917130</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.cassandra</groupId>
+			<artifactId>cassandra</artifactId>
+			<version>0.6.2</version>
+		</dependency>
 
 		<!--  our lucene depencies -->
 
