api changes for 0.7 cassandra release (trunk)

--- a/.classpath
+++ b/.classpath
@@ -30,24 +30,28 @@
 	<classpathentry kind="lib" path="lib/solr-solrj-1.4.0.jar"/>
 	<classpathentry kind="lib" path="lib/stax-api-1.0.1.jar"/>
 	<classpathentry kind="lib" path="lib/wstx-asl-3.2.7.jar"/>
-	<classpathentry kind="lib" path="/Users/jake/workspace/cassandra-0.6/build/apache-cassandra-0.6.1.jar" sourcepath="/cassandra-0.6"/>
-	<classpathentry kind="lib" path="/cassandra-0.6/lib/antlr-3.1.3.jar"/>
-	<classpathentry kind="lib" path="/cassandra-0.6/lib/avro-1.2.0-dev.jar"/>
-	<classpathentry kind="lib" path="/cassandra-0.6/lib/clhm-production.jar"/>
-	<classpathentry kind="lib" path="/cassandra-0.6/lib/commons-cli-1.1.jar"/>
-	<classpathentry kind="lib" path="/cassandra-0.6/lib/commons-codec-1.2.jar"/>
-	<classpathentry kind="lib" path="/cassandra-0.6/lib/commons-collections-3.2.1.jar"/>
-	<classpathentry kind="lib" path="/cassandra-0.6/lib/commons-lang-2.4.jar"/>
-	<classpathentry kind="lib" path="/cassandra-0.6/lib/google-collections-1.0.jar"/>
-	<classpathentry kind="lib" path="/cassandra-0.6/lib/hadoop-core-0.20.1.jar"/>
-	<classpathentry kind="lib" path="/cassandra-0.6/lib/high-scale-lib.jar"/>
-	<classpathentry kind="lib" path="/cassandra-0.6/lib/jackson-core-asl-1.4.0.jar"/>
-	<classpathentry kind="lib" path="/cassandra-0.6/lib/jackson-mapper-asl-1.4.0.jar"/>
-	<classpathentry kind="lib" path="/cassandra-0.6/lib/jline-0.9.94.jar"/>
-	<classpathentry kind="lib" path="/cassandra-0.6/lib/json-simple-1.1.jar"/>
-	<classpathentry kind="lib" path="/cassandra-0.6/lib/libthrift-r917130.jar"/>
-	<classpathentry kind="lib" path="/cassandra-0.6/lib/log4j-1.2.14.jar"/>
-	<classpathentry kind="lib" path="/cassandra-0.6/lib/slf4j-api-1.5.8.jar"/>
-	<classpathentry kind="lib" path="/cassandra-0.6/lib/slf4j-log4j12-1.5.8.jar"/>
+	<classpathentry kind="lib" path="lib/antlr-3.1.3.jar"/>
+	<classpathentry kind="lib" path="lib/avro-1.2.0-dev.jar"/>
+	<classpathentry kind="lib" path="lib/avro-1.3.3-sources~cust1.jar"/>
+	<classpathentry kind="lib" path="lib/avro-1.3.3~cust2.jar"/>
+	<classpathentry kind="lib" path="lib/clhm-production.jar"/>
+	<classpathentry kind="lib" path="lib/commons-cli-1.1.jar"/>
+	<classpathentry kind="lib" path="lib/commons-codec-1.2.jar"/>
+	<classpathentry kind="lib" path="lib/commons-collections-3.2.1.jar"/>
+	<classpathentry kind="lib" path="lib/google-collections-1.0.jar"/>
+	<classpathentry kind="lib" path="lib/guava-r05.jar"/>
+	<classpathentry kind="lib" path="lib/hadoop-core-0.20.1.jar"/>
+	<classpathentry kind="lib" path="lib/high-scale-lib.jar"/>
+	<classpathentry kind="lib" path="lib/jackson-core-asl-1.4.0.jar"/>
+	<classpathentry kind="lib" path="lib/jackson-mapper-asl-1.4.0.jar"/>
+	<classpathentry kind="lib" path="lib/jetty-6.1.21.jar"/>
+	<classpathentry kind="lib" path="lib/jetty-util-6.1.21.jar"/>
+	<classpathentry kind="lib" path="lib/jline-0.9.94.jar"/>
+	<classpathentry kind="lib" path="lib/json-simple-1.1.jar"/>
+	<classpathentry kind="lib" path="lib/jug-2.0.0.jar"/>
+	<classpathentry kind="lib" path="lib/servlet-api-2.5-20081211.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j-log4j12-1.5.8.jar"/>
+	<classpathentry kind="lib" path="lib/snakeyaml-1.6.jar"/>
+	<classpathentry kind="lib" path="lib/apache-cassandra-0.7.0-SNAPSHOT.jar" sourcepath="/cassandra-trunk"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
