--- a/ivy.xml
+++ b/ivy.xml
@@ -25,7 +25,8 @@
     <dependency org="org.slf4j" name="slf4j-simple" rev="1.5.8" conf="* -> *,!sources,!javadoc"/>
     <dependency org="org.slf4j" name="slf4j-log4j12" rev="1.5.8" conf="* -> *,!sources,!javadoc"/>
     <dependency org="commons-lang" name="commons-lang" rev="2.4" conf="* -> *,!sources,!javadoc"/>
-    <dependency org="org.apache.solr" name="solr-core" rev="1.4.0" conf="* -> *,!sources,!javadoc"/>
+    <dependency org="org.apache.lucene" name="lucene-core" rev="2.9.1" conf="*"/>
+    <dependency org="org.apache.solr" name="solr-core" rev="1.4.0" conf="* -> *,!javadoc"/>
   </dependencies>
 </ivy-module>
 
