--- a/.classpath
+++ b/.classpath
@@ -26,12 +26,11 @@
 	<classpathentry kind="lib" path="lib/lucene-spellchecker-2.9.1.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-simple-1.5.8.jar"/>
 	<classpathentry kind="lib" path="lib/solr-commons-csv-1.4.0.jar"/>
-	<classpathentry kind="lib" path="lib/solr-core-1.4.0.jar"/>
+	<classpathentry kind="lib" path="lib/solr-core-1.4.0.jar" sourcepath="/Users/jake/workspace/lucandra/lib/solr-core-1.4.0-sources.jar"/>
 	<classpathentry kind="lib" path="lib/solr-solrj-1.4.0.jar"/>
 	<classpathentry kind="lib" path="lib/stax-api-1.0.1.jar"/>
 	<classpathentry kind="lib" path="lib/wstx-asl-3.2.7.jar"/>
 	<classpathentry kind="lib" path="lib/antlr-3.1.3.jar"/>
-	<classpathentry kind="lib" path="lib/avro-1.2.0-dev.jar"/>
 	<classpathentry kind="lib" path="lib/avro-1.3.3-sources~cust1.jar"/>
 	<classpathentry kind="lib" path="lib/avro-1.3.3~cust2.jar"/>
 	<classpathentry kind="lib" path="lib/clhm-production.jar"/>
@@ -53,5 +52,7 @@
 	<classpathentry kind="lib" path="lib/slf4j-log4j12-1.5.8.jar"/>
 	<classpathentry kind="lib" path="lib/snakeyaml-1.6.jar"/>
 	<classpathentry kind="lib" path="lib/apache-cassandra-0.7.0-SNAPSHOT.jar" sourcepath="/cassandra-trunk"/>
+	<classpathentry kind="lib" path="lib/jredis-1.0-rc1.jar"/>
+	<classpathentry kind="lib" path="lib/zookeeper-3.3.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
