solandra tests passing

--- a/config/cassandra.yaml
+++ b/config/cassandra.yaml
@@ -221,7 +221,7 @@ keyspaces:
           reconciler: TimestampReconciler   
           preload_row_cache: true
           
-        - name: Solr
+        - name: SI
           compare_with: BytesType
           
         - name: MI
